# ai_utilities

./: .coveragerc  .coveragerc.ini  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .safety-project.ini  BASELINE.md  CHANGELOG.md  CLEANUP_PROGRESS.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  RELEASE.md  RELEASE_CHECKLIST.md  SECURITY.md  SUPPORT.md  __init__.py  ai_usage.json  bandit-report.json  benchmarks.py  complete_flow_demo.py  config.ini  coverage.json  debug_api_key.py  debug_standard_setup.py  debug_test.py  demo_all_providers.py  demo_integration.py  demo_sqlite_cache.py  main.py  minimal_test.py  provider_diagnostic_report.json  provider_health.json  pyproject.toml  pytest-report.xml  pytest.ini  pytest_skip_hanging.ini  requirements.txt  (+20 more)
.ai_utilities/usage_stats/: usage_client_0017921b_1767339970.json  usage_client_01a7c350_1767427264.json  usage_client_083e2444_1767340337.json  usage_client_0a5926a9_1767349780.json  usage_client_0bd02679_1767343229.json  usage_client_104b04b0_1767343876.json  usage_client_122ccb88_1767345154.json  usage_client_17107d4d_1767340583.json  usage_client_190c5424_1767344038.json  usage_client_1f7763ed_1767343768.json  usage_client_25fa8db3_1767342638.json  usage_client_262fad96_1767343661.json  usage_client_2799dd98_1767379105.json  usage_client_29019b36_1767445921.json  usage_client_29a9c318_1767380715.json  usage_client_2b228b02_1767340521.json  usage_client_2ec79437_1767342211.json  usage_client_316642ce_1767343067.json  usage_client_334c958d_1766510898.json  usage_client_336a96d4_1767344907.json  usage_client_37052f00_1767343445.json  usage_client_3aa0f328_1767380179.json  usage_client_3c8847f2_1767349664.json  usage_client_40e0ec13_1767343498.json  usage_client_44833c93_1767351134.json  usage_client_4cf0e997_1767343607.json  usage_client_4d3a2fca_1767343121.json  usage_client_4f0531ad_1767453076.json  usage_client_5027d116_1767343930.json  usage_client_536bbaef_1767343283.json  usage_client_5627bdbf_1767340644.json  usage_client_5c87ecb7_1767350918.json  usage_client_5ca0f88b_1767338640.json  usage_client_628357e8_1767338573.json  usage_client_65a0ef1b_1767342852.json  usage_client_66b412ed_1767352885.json  usage_client_673d80d8_1767340214.json  usage_client_680937b5_1767352574.json  usage_client_682caa4e_1767339846.json  usage_client_6938f7d3_1767343822.json  (+48 more)
.github/workflows/: README.md  benchmarks.yml  ci.yml  create_release_tag.yml  dependency-update.yml  minimal-install.yml  provider-health.yml  publish-prerelease-pypi.yml  publish.yml  release.yml  test_suite.yml
.pytest_artifacts/: failure_classification.json
.venv-vanilla/: pyvenv.cfg
.windsurf/workflows/: ai-utilities-refactor-v1.md  ai-utilities-sync-async-clients-v1.md
ai_utilities/: __init__.py  ai_call_timer.py  ai_config_manager.py  ai_integration.py  ai_stats_file.json  buffer_handler.py  error_codes.py  exceptions.py  openai_model.py  rate_limiter.py
ai_utilities.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ai_utilities_audkus/: ai_config_manager.py  ai_integration.py
ai_utilities_audkus.egg-info/: PKG-INFO
coverage_reports/: .gitkeep  status.json
coverage_reports/xml/: .gitkeep
dev_tools/: check_textgen_api.py  create_test_audio.py  debug_knowledge_sources.py  find_textgen_model.py  run_all_tests_complete.py  run_coverage_tests.py  setup_external_providers.py  setup_fastchat.sh  test_non_blocking.py
docs/: AI_CONTRACT.md  CHANGELOG.md  COMPREHENSIVE_TEST_REPORT.md  CONTRIBUTING.md  COVERAGE_SUMMARY.md  LOCAL_AI_SETUP.md  MIGRATION.md  README.md  RELEASE.md  SUPPORT.md  all-providers-guide.md  caching.md  cheat_sheet.md  command_reference.md  files.md  index.md  provider_troubleshooting.md  test_dashboard.md  testing_guide.md  v1.0_migration_baseline.md
docs/analysis/: BASELINE.md  COVERAGE_IMPROVEMENT_REPORT.md  COVERAGE_ISSUE_DIAGNOSED.md  COVERAGE_REPORT_OUTDATED_ANALYSIS.md  FINAL_COVERAGE_REPORT.md  GLOBAL_STATE_REMOVAL_STRATEGY.md  (+9 more)
examples/: README.md  _bootstrap_template.py  _common.py  audio_generation_demo.py  audio_transcription_demo.py  check_examples.py  complete_content_workflow.py  complete_flow_demo.py  demo_integration.py  demo_sqlite_cache.py  document_ai_demo.py  environment_isolation_example.py  files_demo.py  files_quickstart.py  image_generation_demo.py  main.py  parallel_usage_tracking_example.py  pyproject.toml  setup_examples.py  simple_document_ai.py  simple_image_generation.py  smart_setup_example.py  test_main.py  usage_tracking_example.py
manual_tests/: README.md  debug_standard_setup.py  minimal_test.py  run_manual_tests.sh
scripts/: README.md  backup_env.sh  ci_provider_check.sh  coverage_summary.py  daily_provider_check.py  dashboard.py  fastchat_setup.py  import_diagnostic.py  main.py  provider_change_detector.py  provider_diagnostic.py  provider_health_monitor.py  provider_tools.py  restore_env.sh  test_dashboard.py  text_generation_webui_setup.py  webui_api_helper.py
test_output/: format_test_flac.flac
tests/: FAILURE_TRIAGE.md  README_test_isolation.md  automated_test_runner.py  conftest.py  early_import_detector.py  fake_provider.py  test___main__.py  test_advanced_caching.py  test_ai_config_manager.py  test_ai_settings_model_field.py  test_analytics_hooks.py  test_api_key_resolver.py  test_async_client.py  test_async_client_comprehensive.py  test_audio_integration.py  test_audio_utils.py  test_cache_behavior.py  test_cache_comprehensive.py  test_caching.py  test_capabilities.py  test_cli.py  test_client.py  test_client_additional_coverage.py  test_client_comprehensive.py  test_client_comprehensive_integration.py  test_client_core.py  test_client_coverage.py  test_client_coverage_working.py  test_client_direct.py  test_client_phase7_core.py  test_client_simple.py  test_client_simple_coverage.py  test_config_models.py  test_config_resolver.py  test_config_resolver_model_resolution.py  test_configuration_integrity.py  test_contract_policy.py  test_coverage_config_models_simple.py  test_coverage_improvements.py  test_coverage_warning_regression.py  (+100 more)
tools/: benchmarks.py
(+337 files in other folders)
