[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-utilities"
version = "0.4.0"
description = "Small reusable utilities for AI integrations"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Steffen Rasmussen" }]
keywords = ["ai", "openai", "utilities"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
]

# Keep runtime deps minimal. Add only what importing/using the library actually needs.
dependencies = [
  "pydantic>=2.6,<3",
  "pydantic-settings>=2.0,<3",
  "portalocker>=2.0,<3",
  "openai>=1.0,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-cov>=5,<7",
  "pytest-asyncio>=0.21,<1",
  "pytest-ruff>=0.4,<1",
  "ruff>=0.6,<1",
  "mypy>=1.10,<2",
  "types-setuptools",
]

[tool.pytest.ini_options]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
# Configure pytest-ruff for import checking
ruff = [
  # Check imports before running tests
  "--ruff",
  # Fail fast on import issues
  "--ruff-fail-on-error",
  # Run ruff check (not just format)
  "--ruff-check",
]

[project.urls]
Repository = "https://github.com/audkus/ai_utilities"
Issues = "https://github.com/audkus/ai_utilities/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# If you ship default config templates etc., include them like this:
# "ai_utilities" = ["py.typed", "data/*.toml"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.9
target-version = "py39"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Enable import sorting (`I`) and unused import detection (`F401`).
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # unused imports
    "F401",
    # import violations
    "F403",
    "F405",
]
ignore = [
    # Star imports are used in __init__.py files
    "F403",
    "F405",
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint.isort]
# Configure isort to work with the src layout
known-first-party = ["ai_utilities"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
