[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-utilities"
version = "1.0.0b2"
description = "Small reusable utilities for AI integrations"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Steffen Rasmussen" }]
keywords = ["ai", "openai", "utilities", "llm", "sdk"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
]

# Keep runtime deps minimal. Add only what importing/using the library actually needs.
dependencies = [
  "pydantic>=2.6,<3",
  "pydantic-settings>=2.0,<3",
  "portalocker>=2.0,<3",
  "requests>=2.31,<3",
  "urllib3>=1.26,<3",  # Updated to allow v2.x for compatibility
]

[project.optional-dependencies]
# Core provider support
openai = ["openai>=1.0,<3"]

# Aggregate provider extras
providers = [
  "ai-utilities[openai]",
]

# Development dependencies
dev = [
  "pytest>=8,<9",
  "pytest-cov>=5,<7",
  "pytest-asyncio>=0.21,<1",
  "pytest-timeout>=2.3,<3",
  "ruff>=0.6,<1",
  "mypy>=1.10,<2",
  "types-setuptools",
  "types-requests>=2.32.4",
  "python-dotenv>=0.21.0,<1",
  "ai-utilities[providers]",  # Include providers for dev
]

# Audio processing
audio = [
  "mutagen>=1.47,<2",
  "pydub>=0.25.1,<1",
]

# Everything except dev
all = [
  "ai-utilities[providers,audio]",
]

# Complete installation (including dev)
complete = [
  "ai-utilities[dev,audio]",
]

[project.scripts]
ai-utilities = "ai_utilities.cli:main"

[tool.coverage.run]
source = ["src/ai_utilities"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/examples/*",
    "*/coverage_reports/*",
    "setup.py",
]
relative_files = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug:",
  "if settings.DEBUG",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == .__main__.:",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod",
]

[project.urls]
Homepage = "https://github.com/audkus/ai_utilities"
Repository = "https://github.com/audkus/ai_utilities"
Issues = "https://github.com/audkus/ai_utilities/issues"
Changelog = "https://github.com/audkus/ai_utilities/blob/main/CHANGELOG.md"
Documentation = "https://github.com/audkus/ai_utilities/blob/main/README.md"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ai_utilities = ["py.typed"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.9
target-version = "py39"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Enable import sorting (`I`) and unused import detection (`F401`).
select = [
    # pycodestyle
    "E",
    # pycodestyle warnings  
    "W",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # flake8-bandit (security)
    "S",
    # ruff-specific rules
    "RUF",
    # flake8-comprehensions
    "C4",
    # flake8-pie
    "PIE",
]
ignore = [
    # Star imports are used in __init__.py files
    "F403",
    "F405",
    # typing modernization - avoid churn for py39 compatibility
    "UP006",
    "UP045", 
    "UP007",
]

# Per-file ignores with minimal, justified exceptions
per-file-ignores = [
    # Allow assert statements in dev tools
    "dev_tools/**:S101",
    # Allow assert statements in diagnostic scripts  
    "tools/diagnostics/**:S101",
    # Benchmark-specific patterns
    "tools/benchmarks.py:F841,E501,F401,UP006,UP035,RUF059",
    # Test utilities compatibility
    "tests/utils/**:UP006,UP035,F841,W293",
    # Test-specific allowances
    "tests/**:S101,B018,S105,S106,S108,S311,S603,S607,B011,B017,E501,SIM117,SIM105",
    # CLI tools - print statements appropriate
    "src/ai_utilities/cli.py:",
    # Conditional OpenAI import handling
    "src/ai_utilities/client.py:E402",
    "src/ai_utilities/providers/openai_provider.py:E402",
    "src/ai_utilities/providers/openai_compatible_provider.py:E402",
    # SQL queries with validated table names
    "src/ai_utilities/cache.py:S608",
    # Test reset cleanup patterns
    "src/ai_utilities/_test_reset.py:S110",
    # Audio error handling patterns
    "src/ai_utilities/audio/audio_utils.py:S110",
    # Setup tools - print statements appropriate
    "src/ai_utilities/setup/**:",
    # Dynamic loading and module organization
    "src/ai_utilities/__init__.py:F401,E402",
    # Git subprocess in safe context
    "src/ai_utilities/knowledge/models.py:S607",
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint.isort]
# Configure isort to work with the src layout
known-first-party = ["ai_utilities"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.mypy]
python_version = "3.9"
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
disallow_untyped_defs = false
ignore_missing_imports = true

# Per-module ignores for problematic areas
[[tool.mypy.overrides]]
module = [
    "ai_utilities.client.*",
    "ai_utilities.async_client.*",
    "ai_utilities.knowledge.*",
    "ai_utilities.audio.*"
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "ai_utilities.providers.openai_provider",
    "ai_utilities.providers.openai_compatible_provider",
    "ai_utilities.openai_model",
    "ai_utilities.rate_limit_fetcher"
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "ai_utilities.config_resolver",
    "ai_utilities.env_utils",
    "ai_utilities.env_overrides",
    "ai_utilities.usage_tracker",
    "ai_utilities.cache"
]
check_untyped_defs = true
